# ppc2c

cmake/: FindIDA.cmake
src/: CMakeLists.txt  main.cpp
